# Weather-Forecast

./: CMakeLists.txt  LICENSE  README.md
lib/: App.cpp  App.h  ConfigParser.cpp  ConfigParser.h  ForecastManager.cpp  ForecastManager.h  config.json
